--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<body>
 		<h1>Game</h1>
 		<div id="gameport"></div>
+
+		<p id="ball_location"></p>
+		<p id="score"></p>
 	
 		<h1>Instructions</h1>
 		<p>How to play my game...</p>
@@ -23,6 +26,7 @@
 		</script>
 
 		<script src="pixi.min.js"></script>
+		<script src="tweenjs.min.js"></script>
 		<script src="game.js"></script>
 	</body>
 </html>
