Changed background to look more like a baseball field

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Hello World!</title>
 	</head>
 	<body>
-		<h1>Game</h1>
+		<h1>Minimalist Baseball</h1>
 		<div id="gameport"></div>
 
 		<p id="ball_location"></p>
