--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
 		<h1>Minimalist Baseball</h1>
 		<div id="gameport"></div>
 
-		<p id="ball_location"></p>
+		<p>Score</p>
 		<p id="score"></p>
 	
 		<h1>Instructions</h1>
-		<p>How to play my game...</p>
+		<p>Press "B" to pitch the ball</br>
+		   Press "space" to hit the ball</p>
+
+		<p>A baseball team is practicing. You're batting, hitting to your teammates. 
+		   Hit your teammate's glove in order to score points</br>
+		   Where the ball goes depends on if you hit the ball sooner or later</p>
 
 		<h1>Comments</h1>
 		<div id="disqus_thread"></div>
